--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="phone">Phone</string>
     <string name="email">Email</string>
     <string name="profile_pref">my.edu.tarc.contact.profile</string>
+    <string name="invalid_input">Invalid Input</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="record_saved">Record Saved</string>
 </resources>
